# Lamprey-WSF-AOG-Saddle

./: .gitattributes  .gitignore  .gitleaks.toml  .hadolint.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  conftest.py  deny.toml  et HEAD  pyproject.toml  pytest.ini
.cargo/: audit.toml
.claude/: CLAUDE.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  branch-protection.yml
.integrity/: README.md  subagent-config.md
PLANNING/: SADDLE-ARCHITECTURE-AND-CONFORMANCE-CONTRACT.md  SADDLE-CURRENT-STATE-GAP-MATRIX.md  SADDLE-FOUNDING-DIRECTION.md  SADDLE-HISTORY-RECONCILIATION-ADDENDUM.md  SADDLE-INDEPENDENCE-DECISION-2026-07-16.md  SADDLE-NO-SECRET-IMPORT-PROCEDURE.md  SADDLE-SEED-CHECKPOINT-2026-07-17.md  SADDLE-SEED-RECONCILIATION-2026-07-16.md  SADDLE-SOURCE-AND-RENAME-MANIFEST.md  SADDLE-WSF-AOG-INDEPENDENT-PROJECT-PSPR.md
adapters/: __init__.py  base.py  runner.py
compliance-dashboard/: README.md  __init__.py  alerts.py  app.py  audit_viewer.py  monitoring.py  reports.py  requirements.txt  util.py
config/: auth_keys.toml  forbidden-terms.toml  gpu-release-thresholds.toml  kv.toml  power.toml  production.example.toml  scoring.toml  ship-validator.toml  topology.toml
configs/: pack-leader.toml  ranger.toml  scout.toml
crates/saddle-bridge/: Cargo.toml
crates/saddle-bridge/src/: lib.rs
crates/saddle-bridge/tests/: contract_properties.rs  sad34_action_gate.rs
crates/saddle-conformance/: Cargo.toml
crates/saddle-conformance/src/: bars.rs  lib.rs  main.rs
crates/saddle-conformance/tests/: robustness_conformance.rs
crates/saddle-node/: Cargo.toml
crates/saddle-node/src/: driver.rs  edge.rs  heartbeat.rs  lib.rs  registration.rs  runtime.rs
crates/saddle-node/tests/: live_containerd.rs  mode_ladder.rs
crates/saddle-noded/: Cargo.toml
crates/saddle-noded/src/: lib.rs  main.rs
crates/saddle-noded/tests/: edge.rs
crates/saddle-scheduler/: Cargo.toml
crates/saddle-scheduler/src/: filters.rs  framework.rs  lib.rs  preemption.rs  professional.rs  scorers.rs  types.rs
crates/saddle-scheduler/tests/: attested_placement.rs  no_fabricated_metrics.rs  sad32_hard_placement.rs  sad43_professional_scheduler.rs  v6_attested_breach.rs
crates/saddle-store/: Cargo.toml
crates/saddle-store/src/: lib.rs  redb_backend.rs
crates/saddle-store/src/raft/: mod.rs  state_machine.rs  types.rs  watch.rs
crates/saddle-store/tests/: raft.rs  snapshot.rs  store.rs  watch.rs
crates/saddlectl/: Cargo.toml
crates/saddlectl/src/: lib.rs  main.rs  migration.rs
crates/saddlectl/tests/: migration.rs  roundtrip.rs
deployment/: README.md
docs/: ACQUISITION-PACKAGE.md  ADAPTER-COMPLETION-MATRIX.md  API-REFERENCE.md  AUDIT-RETENTION.md  BACKUP-RESTORE.md  BUILD.md  BUYER-INTEGRATION-GUIDE.md  COGENT-DEPLOYMENT-ROADMAP.md  DEMO-SUITE.md  DEPLOYMENT.md  FIRST-BOOT.md  GITDOCTOR-75-EVIDENCE-PACK.md  GITDOCTOR-75-PROMPT-ROSTER.md  GITDOCTOR-75-REMEDIATION-PLAN.md  HANDOFF.md  HISTORICAL-EVIDENCE-STATUS.md  INCIDENT-RESPONSE.md  INDEPENDENT-EVIDENCE-DEFERRALS.md  INDEX.md  INSTALL.md  JOHN-REMEDIATION-PLAN.md  JOHN-REMEDIATION-ROSTER.md  KNOWN-ISSUES.md  LAMPREY-MAI-STACK-MEMO.md  LOCAL-GITDOCTOR-EVIDENCE.json  LOCAL-GITDOCTOR-EVIDENCE.md  LOCAL-GITDOCTOR-REPORT.json  LOCAL-GITDOCTOR-REPORT.md  LOCAL-GITDOCTOR-SCAN.md  OBSERVABILITY.md  OPERATIONS.md  RC1-BUILD-NOTES.md  RC1-FREEZE-NOTES.md  RC1-FRESH-MACHINE-NOTES.md  RC1-PACKAGE-MANIFEST.md  RC1-SELF-REVIEW-TRACK-C.md  RC1-TEST-EVIDENCE.md  RC1-TESTER-FEEDBACK.md  RC1-TESTER-RESPONSE-DOUGHERTY.md  RC1.2-BUILD-NOTES.md  (+17 more)
mai-adapters/: Cargo.toml
mai-adapters/src/: audit.rs  bridge.rs  config.rs  errors.rs  health.rs  lib.rs  manager.rs  process.rs  python_embed.rs  validation.rs
mai-adapters/tests/: benchmarks.rs  e2e_integration.rs  integration_adapters.rs
mai-api/: Cargo.toml  build.rs
mai-api/config/: adapters.toml  scheduler.toml
mai-api/proto/: mai.proto
mai-api/src/: air_gap.rs  audit.rs  audit_wal.rs  auth.rs  config.rs  errors.rs  lib.rs  main.rs  metrics.rs  middleware.rs  rate_limit.rs  routes.rs  sealer_builder.rs  server.rs  ship_profile.rs  state.rs  types.rs
mai-api/src/grpc/: audit.rs  health.rs  inference.rs  mod.rs  models.rs  power.rs  registry.rs  server.rs
mai-api/src/handlers/: compliance.rs  health.rs  inference.rs  metrics.rs  mod.rs  models.rs  system.rs  telemetry.rs  trust.rs
mai-api/src/streaming/: sse.rs  ws.rs
mai-api/tests/: audit_wal.rs  compliance_integration.rs  e2e_inference.sh  grpc_integration.rs  health_system_j13.rs  http_integration.rs  production_guard.rs  sealer_bootstrap.rs  sec_95_rate_limit.rs  ship_07b_endpoints.rs  ship_11_observability.rs  ship_profile.rs  streaming_integration.rs
mai-compliance/: Cargo.toml
mai-compliance/src/: bundle.rs  ear.rs  itar.rs  jurisdiction.rs  lib.rs  medical_entities.rs  subject_hash.rs  tech_data.rs  trust.rs  trust_cache.rs
mai-compliance/src/audit/: api.rs  chain.rs  entry.rs  mod.rs  sealer.rs  store.rs  triggers.rs
mai-compliance/src/ocap/: cultural.rs  mod.rs  ocap_rules.rs  treaty.rs  tribal_data.rs
mai-compliance/src/policy/: api.rs  audit_feed.rs  cache.rs  composer.rs  mod.rs  templates.rs
mai-compliance/src/reports/: api.rs  engine.rs  mod.rs  pdf.rs  prune.rs
mai-compliance/src/reports/templates/: activity.rs  digest.rs  hipaa.rs  itar.rs  mod.rs  ocap.rs
mai-compliance/tests/: compliance_demos.rs  compliance_perf.rs  phi_perf.rs
mai-core/: Cargo.toml
mai-hil/: Cargo.toml
mai-hil/src/: lib.rs
mai-hil/src/drivers/: amd.rs  cpu.rs  mod.rs  nvidia.rs  tetramem_stub.rs
mai-hil/src/traits/: adapter.rs  hardware_probe.rs  memory_manager.rs  mod.rs  power_state.rs  secure_load.rs
mai-hil/tests/: integration.rs
mai-scheduler/: Cargo.toml
mai-sdk-python/: pyproject.toml
mai-sdk-rs/: Cargo.toml
mai-sdk-rs/src/: lib.rs
mai-sdk-rs/tests/: config.rs  endpoints.rs  http_client.rs  url_and_headers.rs
packaging/: README.md
scripts/: build-package.ps1  (+17 more)
tools/rule-tester/: Cargo.toml
tools/rule-tester/examples/: hipaa-scenarios.toml
tools/rule-tester/src/: main.rs
(+613 files in other folders)
