[package]
name = "mai-adapters"
description = "MAI adapter framework: Rust-side AdapterManager and PyO3 FFI bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
futures = "0.3"

mai-core = { path = "../mai-core" }
mai-hil = { path = "../mai-hil" }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }

[features]
default = []
integration = []
benchmark = []

[lints]
workspace = true
