[package]
name = "mai-compliance"
description = "MAI HIPAA compliance engine: PHI detection, BAA enforcement, de-identification, medical entity recognition"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
regex = "1"

# Session 28: canonical ConnectivityState shared with mai-adapters and mai-api.
mai-core = { path = "../mai-core" }

[lints]
workspace = true
