[package]
name = "mai-hil"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Island Mountain MAI - Hardware Interface Layer"

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
