[package]
name = "mai-sdk-rs"
description = "MAI Rust SDK for performance-critical L4 components"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
