[package]
name = "saddle-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
saddle-estate = { path = "../saddle-estate" }
chrono = { workspace = true }
fabric-cache = { path = "../fabric-cache" }
fabric-contracts = { path = "../fabric-contracts" }
fabric-crypto = { path = "../fabric-crypto" }
fabric-identity = { path = "../fabric-identity" }
fabric-revocation = { path = "../fabric-revocation" }
fabric-token = { path = "../fabric-token" }
hex = "0.4"
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }

[lints]
workspace = true
