[package]
name = "saddle-noded"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "saddle-noded — the runnable Saddle edge/worker node daemon: wraps the saddle-node runtime, registers its Node with the control plane over the saddled admin API, and heartbeats; serves /healthz for the conformance harness"

[[bin]]
name = "saddle-noded"
path = "src/main.rs"

[lib]
name = "saddle_noded"
path = "src/lib.rs"

[dependencies]
saddle-estate = { path = "../saddle-estate" }
saddle-node = { path = "../saddle-node" }
saddled = { path = "../saddled" }
fabric-contracts = { path = "../fabric-contracts" }
axum = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
