[package]
name = "saddle-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
redb = "2"
tokio = { workspace = true }
openraft = { version = "0.9", features = ["serde", "storage-v2"] }

[lints]
workspace = true
