[package]
name = "saddlectl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "saddlectl — the Saddle control-plane CLI: apply/get/describe/delete against saddle-apiserver with a WSF token"

[[bin]]
name = "saddlectl"
path = "src/main.rs"

[lib]
name = "saddlectl"
path = "src/lib.rs"

[dependencies]
blake3 = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
saddle-store = { path = "../saddle-store" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
saddle-apiserver = { path = "../saddle-apiserver" }
fabric-contracts = { path = "../fabric-contracts" }
fabric-crypto = { path = "../fabric-crypto" }
fabric-token = { path = "../fabric-token" }
fabric-revocation = { path = "../fabric-revocation" }
wsf-ledger = { path = "../wsf-ledger" }
base64 = "0.22"
chrono = { workspace = true }

[lints]
workspace = true
